--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
 , "description": "Embed scripts into HTML files verbatim"
 , "version": "0.0.1"
 , "main": "index.js"
+, "repository": "https://github.com/sidonath/broccoli-embed-script"
 
 , "dependencies": {
     "broccoli-writer": "^0.1.1"
